# replit-russh

./: .gitattributes  .gitignore  .replit  pnpm-lock.yaml  replit.md
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/src/routes/: index.ts  info.ts
artifacts/ssh-dashboard/: index.html  package.json
artifacts/ssh-dashboard/.replit-artifact/: artifact.toml
artifacts/ssh-dashboard/src/: App.tsx  index.css
attached_assets/: Pasted-Buat-aplikasi-SSH-Server-over-WebSocket-menggunakan-Rus_1777797725071.txt
ws-ssh-server/: Cargo.toml  host_key
ws-ssh-server/src/: auth.rs  handler.rs  main.rs  pty.rs  transport.rs
