[package]
name = "ws-ssh-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
russh = "0.44"
russh-keys = "0.44"
portable-pty = "0.8"
async-trait = "0.1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
